--- a/09week/customer-satisfaction/index.html
+++ b/09week/customer-satisfaction/index.html
@@ -60,20 +60,20 @@
         <input class="text-box" type="email" name="email" id="email" placeholder="john@doe.com">
 
         <label for="url">Website</label>
-        <input class="text-box" type="url" name="website" id="website" placeholder="www.johndoe.com">
+        <input class="text-box" type="url" name="website" id="url" placeholder="www.johndoe.com">
         
         <label for="password">Password</label>
         <input class="text-box" type="password" name="password" id="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;">
         
-        <label for="check">Arbitrary Checkbox</label>
+        <label for="checkbox">Arbitrary Checkbox</label>
         <input class="text-box" type="checkbox" name="checkbox" id="checkbox">
 
-        <label for="check">Arbitrary Radio Buttons</label>
-        <input type="radio" name="radio" id="radio">
-        <input type="radio" name="radio" id="radio">
-        <input type="radio" name="radio" id="radio">
+        <!-- <label for="check">Arbitrary Radio Buttons</label> -->
+        <input type="radio" name="radio">
+        <input type="radio" name="radio">
+        <input type="radio" name="radio">
 
-        <label for="check">Arbitrary Range</label>
+        <label for="range">Arbitrary Range</label>
         <input type="range" name="range" id="range">
 
         <button id="submit" type="submit">Register</button>
