made changes to landing

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -17,7 +17,7 @@
 			 <a class="navbar-brand" href="../../02week/bio/index.html">Bio</a>
 			 <a class="navbar-brand" href="../../01week/resume/index.html">Resume</a>
 			 <a class="navbar-brand" href="../../02week/bio/photos.html">Photos</a>
-			 <a class="navbar-brand" href="contact.html">Contact</a>
+			 <a class="navbar-brand" href="../../02week/bio/contact.html">Contact</a>
 		</nav>
 	</div>
 
