--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        <a class="navbar-brand" href="02week/bio/index.html">Bio</a>
        <a class="navbar-brand" href="01week/resume/index.html">Resume</a>
        <a class="navbar-brand" href="02week/bio/photos.html">Photos</a>
-       <a class="navbar-brand" href="contact.html">Contact</a>
+       <a class="navbar-brand" href="02week/bio/contact.html">Contact</a>
     </nav>
   </div>
 
@@ -45,6 +45,15 @@
     <a href="02week/bio/index.html">Bio</a>
 
   </section>
+    <br>
+
+    <section>
+    <h3>Week 3</h3>
+      <a href="03week/airplane/index.html">Airplane</a>
+  </section>
+  
+  <section>
+
 </div>
 
   <hr>
@@ -52,14 +61,10 @@
 
 <div class="projectheader">
 <h3>Upcoming Projects</h3>
+</section>
 <br>
 
-  <section>
-    <h3>Week 3</h3>
-      <!-- link projects here -->
-  </section>
-  <br>
-  <section>
+
     <h3>Week 4</h3>
     <!-- link projects here -->
   </section>
@@ -103,7 +108,7 @@
 
 <hr>
   <footer> 
-  <h3>
+  <h2>
 <!--    <a href="https://www.linkedin.com/" i class="fab fa-linkedin"></i></a>
     <a href="https://www.github.com/" i class="fab fa-git"></a></i>
     <a href="mailto:neilcho83@gmail.com" i class="fas fa-envelope-square"></a></i>
@@ -121,7 +126,7 @@
     <a href="https://jsfiddle.net/">
     <i class="fab fa-jsfiddle"></a></i>
 
-  </h3>©Copyright 2018 
+  </h2>©Copyright 2018 
   </footer>
 
 
