added a comment on airplane branch

--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -11,6 +11,7 @@
 
 	<!-- <h1><img src="web-workbook/03week/airplane/img/logo.png"></h1>
 	h1 is used in the video instruction but I used the navbar approach -->
+	<!-- adding into github again at 5:30AM due to conflict message on the pull request -->
 
 	<div class="navbar">
 			<img src="img/logo.png">
