--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Towers of Hanoi</title>
+  <link rel="stylesheet" href="../../simple-scrollbar/simple-scrollbar.css">
+  <link rel="stylesheet" href="../../css/nav-menu.css">
   <link rel="stylesheet" href="style.css" />
+  <link rel="import" href="../../nav-menu.html">
+
 </head>
+
 <body>
-  <div data-stack="1">
-    <div data-block="100"></div>
-    <div data-block="75"></div>
-    <div data-block="50"></div>
-    <div data-block="25"></div>
-  </div>
-  <div data-stack="2">
-  </div>
-  <div data-stack="3">
-  </div>
-  <div id="announce-game-won"></div>
+  <main>
+    <div data-stack="1">
+      <div data-block="100"></div>
+      <div data-block="75"></div>
+      <div data-block="50"></div>
+      <div data-block="25"></div>
+    </div>
+    <div data-stack="2">
+    </div>
+    <div data-stack="3">
+    </div>
+    <div id="announce-game-won"></div>
+  </main>
+
+  <!-- jQuery -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+  crossorigin="anonymous"></script>
+  
+  <!-- scripts  -->
   <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="../../simple-scrollbar/simple-scrollbar.js"></script>
+  <script type="text/javascript" src="../../js/nav-menu.js"></script>
+
 </body>
+
 </html>
