--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Checkpoint One</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
+</head>
+    <img src="https://i.imgur.com/HLcxpNP.png" class="img">
+<nav>
+    <div>
+    <ul>
+        </li>
+        <li>Home</li>
+        <li>Menu</li>
+        <li>Custom Orders</li>
+        <li>Catering</li>
+    </ul>
+    </div>
+</nav>
+<body>
+    
+</body>
+</html>
