Landing page Final re-upload after deleting original branch 'landing' due to branch conflicts

--- a/index.html
+++ b/index.html
@@ -133,4 +133,5 @@
 </body>
 
 <!-- adding comments prior to re-upload on 10/19 -->
+<!-- adding landing page on to newly created index.html branch due to conflicts -->
 </html>
