pictures and text uploaded

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE <!DOCTYPE html>
-<html>
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
 </head>
+
+
     <img src="https://i.imgur.com/HLcxpNP.png" class="img">
-<nav>
+ <nav>
     <div>
-    <ul>
-        </li>
-        <li>Home</li>
-        <li>Menu</li>
-        <li>Custom Orders</li>
-        <li>Catering</li>
+        <!--buttons for nav menu-->
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Delius+Swash+Caps"/>
+        <button class="home">Home</button>
+        <button class="menu">Menu</button>
+        <button class="custom">Custom Orders</button>
+        <button class="cater">Catering</button>
     </ul>
     </div>
 </nav>
 <body>
-    
+  <h1>Welcome to Brown Sugar Bakery!</h1>
+<div>
+    <p>
+        <img src="https://i.imgur.com/dsDjEbD.jpg" class="img02">
+        <h3>
+            Why We Started
+        </h3>
+        Brown Sugar Bakery is a lifelong dream that I've had since I was four years old. Stemming from my grandfather, I was born into a family of chefs. I remember being 12 and instead of planning on what I would get for Christmas, I would be planning dessert menus. I finally decided to turn my dream into reality in the spring of 2016. 
+    </p>
+</div>
+<div>
+    <p>
+        <img src="https://i.imgur.com/xfmqYXO.jpg" class="img03">
+        <h3>
+           What We're About 
+        </h3>
+        At BSB we pride ourselves on being a from-scratch bakery. We like to keep our carbon footprint as small as possible. Community means a lot to us so we keep our products as local as possible. 
+    </p>
+</div>
+<div>
+    <p>
+        <img src="https://i.imgur.com/4v45Vpv.jpg" class="img04">
+        <h3>
+            Testimonials
+        </h3>
+        "I love that Sky is super accomodating! I had a last minute cake order and not only was the cake delicious and looked better than I imagined, she was super nice about welcoming my bad planning. Reccommending Brown Sugar Bakery to all of my friends!" </br>
+        "Super friendly staff. Attentive and always smiling."</br>
+        "Not only super tasty, but pretty! Thanks Brown Sugar Bakery!"</br>
+        "Best sourdough in town."
+    </p>
+</div>
+<div>
+    <p>
+        <h3>
+            Hours
+        </h3>
+        Monday - Thursday: 7am - 6pm</br>
+        Friday - Saturday: 6am - 8pm</br>
+        Sunday: Closed
+    </p>
+</div>
 </body>
-</html>
+<footer>
+    <b>Address:</b> 540 Sugar Creek Dr. Austin, TX, 78746
+        <b>512.983.5436</b>
+        <b>Email Address</b> info@brownsugarbakery.com
+
+</footer>
