--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -39,9 +39,18 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
   <main>
-    <img src="img/cone.png" alt="A Traffic Cone">
-    <h1>This project is currently under construction...</h1>
+    <div class="container-main">
+      <div class="container-inner">
+        <div class="box" id="counter-1">1</div>
+        <div class="box" id="reset">Clr</div>
+      </div>
+    </div>
   </main>
+
+  <!-- Scripts
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 
   <!-- End Document
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
