implemented groundwork for clicker game idea

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -41,8 +41,9 @@
   <main>
     <div class="container-main">
       <div class="container-inner">
-        <div class="box" id="counter-1">1</div>
-        <div class="box" id="reset">Clr</div>
+        <div id="anvil"><img src="img/anvil.png" alt="an anvil"></div>
+        <div id="counter">1</div>
+        <div class="button" id="reset">Clr</div>
       </div>
     </div>
   </main>
