tons of progress! hammer swing animation with proper counting

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -41,9 +41,10 @@
   <main>
     <div class="container-main">
       <div class="container-inner">
+        <div id="hammer" class="swing"><img src="img/hammer.png" alt="a hammer"></div>
         <div id="anvil"><img src="img/anvil.png" alt="an anvil"></div>
         <div id="counter">1</div>
-        <div class="button" id="reset">Clr</div>
+        <!-- <div class="button" id="reset">Clr</div> -->
       </div>
     </div>
   </main>
