--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Michael Snowden Checkpoint One</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
+    <script src="main.js"></script>
+</head>
+
+<body>
+
+    <h1>hello world!</h1>
+
+    <div class="topnav">
+        <a href="index.html"><img src="...">Home</a>
+        <a href="index.html"><img src="..."></a>
+        <a href="index.html"><img src="...">Home</a>
+    </div>
+
+ <main>
+     
+ </main>
+
+ 
+
+
+</body>
+</html>
