trying to get sound working on clicker game

--- a/checkpoint-3/index.html
+++ b/checkpoint-3/index.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./style.css" />
     <script src="main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     </head>    
-
   <body>
+    <audio>
+      <source src="hit.wav" type="audio/mpeg">
+    </audio>        
     <div id="screen">
       <div class="box"></div>
       <div class="box"></div>
