--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tic Tac Toe</title>
+  <div class="message"></div>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
