Fixed products css issue

--- a/checkpoint-one/products.html
+++ b/checkpoint-one/products.html
@@ -3,7 +3,7 @@
 <html>
     
 <head>
-    <link type ="text/css" rel="stylesheet"  href="../style.css">
+    <link type ="text/css" rel="stylesheet"  href="style.css">
     <title>Urban Growth</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/icon.ico" />
 </head>
