header shell done

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -15,11 +15,12 @@
             <div class="vineStyle"></div>
         </div>
         <div class="centerContainer">
-
+            <div class="stats"></div>
+            <div class="stats"></div>
         </div>
         <div class="rightContainer">
             <div class="vineStyle"></div>
-            <div class="scoreKeeper"></div>
+            <div class="alertsContainer"><div class = "alertsTitle">ALERT</div></div>
         </div>
     </div>
     <div class="mainGameContainer">
