--- a/lynn-portfolio/blog-portfolio.html
+++ b/lynn-portfolio/blog-portfolio.html
@@ -8,7 +8,7 @@
 <body class="portfoliocontainer">
     <header>
         <div class="navwhitebkgrnd">
-            <a href="./blog-portfolio.html">Projects</a>
+            <a href="./bio.html">Home</a>
             <a href="">My Story</a>
             <a href="./resume.html">Resume</a>
             <a href="">Contact</a>
@@ -16,10 +16,10 @@
     </header>
     <hr class="blackfade">
 <div class="box">
-    <div class="box1">Writing</div>
-    <div class="box2">Web dev</div>
-    <div class="box3">Multimedia</div>
-    <div class="box4">Reimagine Migration</div>
+    <div class="box1"><a href="" target="blank"><h2>Writing</h2></a></div>
+    <div class="box2"><a href="" target="blank"><h2>Web dev</h2></a></div>
+    <div class="box3"><a href="" target="blank"><h2>Multimedia</h2></a></div>
+    <div class="box4"><a href="https://www.reimaginemigration.org/" target="blank"><h2>Reimagine Migration</h2></a></div>
 </div>
 </body>
 </html>
