Added Survey Form to portfolio, added Cookie Clicker too

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -27,6 +27,7 @@
         <li><a href="../02week/bio/index.html">Bio</a></li>
         <li><a href="../02week/blog/index.html">Blog</a></li>
         <li><a href="https://github.com/kylepajari/web-workbook">GitHub</a></li>
+        <li><a href="projects.html">My Projects</a></li>
       </ul>
     </nav>
   </header>
