reworded content on resume

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -16,19 +16,24 @@
   <div class="background">
     <main>
       <h1>Objective</h1>
-      <p>Utilize my 15 years of management experience to transition into a successful career as a web developer with a company that values pride, teamwork, and education.</p>
+      <p>Utilize my 15 years of management experience to transition into a successful career as a web developer with a
+        company that values pride, teamwork, and education.</p>
     </main>
+    </div>
 
     <section>
       <h1>Skills</h1>
       <ul>
-        <li>Basic HTML5, CSS3, JavaScript, WordPress, Git, Wireframing</li>
-        <li>10 years in the role of restaurant management with an emphasis on financial reporting, inventory procedures, sales growth, education, and team building</li>
+        <li>Basic HTML5, CSS3, JavaScript, jQuery, WordPress, Git, Wireframing</li>
+        <li>10 years in the role of restaurant management with an emphasis on financial reporting, inventory
+          procedures, sales growth, education, and team building</li>
       </ul>
-      </section>
+    </section>
 
     <article>
-      <div class="workhistory"><h1>Work History</h1></div>
+      <div class="workhistory">
+        <h1>Work History</h1>
+      </div>
 
       <h3>Austin Coding Academy</h3>
       <p>2018-Current</p>
@@ -78,13 +83,7 @@
       <h2>Robert Hannon</h2>
       <p>General Manager, Mimi's Cafe</p>
       <p>760-885-8161</p>
-
-
-      
-
-
     </footer>
-  </div>
 </body>
 
 </html>
