working on layout and intering data

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -4,24 +4,39 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Michael Snowden Checkpoint One</title>
+    <title>Lyft: A ride when you need one | Be a Lyft driver - Lyft</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
     <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
 </head>
 
 <body>
 
-    <h1>hello world!</h1>
-
+ <header>
+    <img src="img/lyft-logo.png">
     <div class="topnav">
-        <a href="index.html"><img src="...">Home</a>
-        <a href="index.html"><img src="..."></a>
-        <a href="index.html"><img src="...">Home</a>
+        <a href="index.html"><b>DRIVER</b></a>
+        <a href="index.html"><b>RIDER</b></a>
+        <a href="index.html"><b>LOGIN</b></a>
     </div>
-
+ </header>
+ <hr>
+ 
  <main>
-     
+        <section class="content">
+            <div class="grab">Grab the wheel<br>
+            and start earning.</div>
+            <div class="row3"><input type="tel" id="phone-number"
+            placeholder="Enter mobile phone number">
+            <input type="radio">I agree to Lyft's <u>Terms of Service</u></div><br>
+            <button type="button">APPLY TO DRIVE</button><u>SIGN UP TO RIDE</u>
+        </section>
+
+        <aside class="main-image">
+            <img src="img/lyft-img.png">
+        </aside>
+
  </main>
 
  
