Finished portfolio page. Needs input. If time, needs fixes to resume

--- a/lynn-portfolio/blog-portfolio.html
+++ b/lynn-portfolio/blog-portfolio.html
@@ -16,9 +16,9 @@
     </header>
     <hr class="blackfade">
 <div class="box">
-    <div class="box1"><a href="" target="blank"><h2>Writing</h2></a></div>
-    <div class="box2"><a href="" target="blank"><h2>Web dev</h2></a></div>
-    <div class="box3"><a href="" target="blank"><h2>Multimedia</h2></a></div>
+    <div class="box1"><a href="https://issuu.com/foundingaustin" target="blank"><h2>Writing</h2></a></div>
+    <div class="box2"><a href="https://github.com/lynnwise" target="blank"><h2>Web dev</h2></a></div>
+    <div class="box3"><a href="http://lynnwisewriter.com/radio/" target="blank"><h2>Multimedia</h2></a></div>
     <div class="box4"><a href="https://www.reimaginemigration.org/" target="blank"><h2>Reimagine Migration</h2></a></div>
 </div>
 </body>
