--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -21,26 +21,29 @@
     </div>
 </nav>
 <body>
-  <h1>Welcome to Brown Sugar Bakery!</h1>
-<div>
+<h1>Welcome to Brown Sugar Bakery!</h1>
+<div class="content">
+    <div id="why">
     <p>
         <img src="https://i.imgur.com/dsDjEbD.jpg" class="img02">
         <h3>
+            <!--Fundamentals of the page-->
             Why We Started
         </h3>
         Brown Sugar Bakery is a lifelong dream that I've had since I was four years old. Stemming from my grandfather, I was born into a family of chefs. I remember being 12 and instead of planning on what I would get for Christmas, I would be planning dessert menus. I finally decided to turn my dream into reality in the spring of 2016. 
     </p>
-</div>
-<div>
+</div>  
+
+<div id="what">
     <p>
         <img src="https://i.imgur.com/xfmqYXO.jpg" class="img03">
         <h3>
-           What We're About 
+        What We're About 
         </h3>
         At BSB we pride ourselves on being a from-scratch bakery. We like to keep our carbon footprint as small as possible. Community means a lot to us so we keep our products as local as possible. 
     </p>
 </div>
-<div>
+<div id="test">
     <p>
         <img src="https://i.imgur.com/4v45Vpv.jpg" class="img04">
         <h3>
@@ -52,7 +55,7 @@
         "Best sourdough in town."
     </p>
 </div>
-<div>
+<div id="hour">
     <p>
         <h3>
             Hours
@@ -61,6 +64,7 @@
         Friday - Saturday: 6am - 8pm</br>
         Sunday: Closed
     </p>
+</div>
 </div>
 </body>
 <footer>
