header shell completed

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -15,12 +15,57 @@
             <div class="vineStyle"></div>
         </div>
         <div class="centerContainer">
-            <div class="stats"></div>
-            <div class="stats"></div>
+            <div class="stats">
+                <div class = "woodInventoryContainer">
+                    <div class = "woodIcon"></div>
+                    <div>Wood</div>
+                     <!--display for current value of wood-->
+                    <div id="currentWood" class = "currentResorceCount">0</div>
+                </div>
+                <div class = "stoneInventoryContainer">
+                    <div class = "stoneIcon"></div>
+                    <div>stone</div>
+                     <!--display for current value of Stone-->
+                    <div id="currentStone" class = "currentResorceCount">0</div>
+                </div>
+                <div class = "ironInventoryContainer">
+                    <div class = "ironIcon"></div>
+                    <div>Iron</div>
+                    <!--display for current value of iron-->
+                    <div id="currentIron" class = "currentResorceCount">0</div>
+                </div>
+            </div>
+            <div class="stats">
+                <div class="waterInventoryContainer">
+                    <div class = "waterIcon"></div>
+                    <div>Water</div>
+                     <!--display for current value of water-->
+                    <div id="currentWater" class = "currentResorceCount">0</div>
+                </div>
+                <div class="foodInventoryContainer">
+                    <div class = "foodIcon"></div>
+                    <div>Food</div>
+                     <!--display for current value of food-->
+                    <div id="currentFood" class = "currentResorceCount">0</div>
+                </div>
+                <div class="inventoryOpenContainer">
+                    <div class = "inventoryOpenButton">Open Inventory</div>
+                </div>
+            </div>
         </div>
         <div class="rightContainer">
             <div class="vineStyle"></div>
-            <div class="alertsContainer"><div class = "alertsTitle">ALERT</div></div>
+            <div class="informationContainer">
+                <div id = "informationAlerts">
+                    ALERTS
+                </div>
+                <div id = "informationQuests">
+                    QUESTS
+                </div>
+                <div id = "informationCenter">
+                    HELP
+                </div>             
+            </div>
         </div>
     </div>
     <div class="mainGameContainer">
