all content added. working on page design.

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -39,8 +39,60 @@
 
  </main>
 
- 
+ <footer>
+        <aside class="driver">
+         <h4>DRIVER</h4>
+            <ul>
+            <li>Become a Driver</li>
+            <li>Why Lyft</li>
+            <li>Cities</li>
+            <li>Help</li>
+            <li>Express Drive</li>
+            <li>Application Requirements</li>
+            <li>Bonus</li>
+            <li>Earnings</li>
+            <li>Jobs</li>
+            <li>Hub</li>
+            </ul>
+        </aside>
 
+        <aside class="rider">
+         <h4>RIDER</h4>
+            <ul>
+            <li>Sign up to Ride</li>
+            <li>Business Profile</li>
+            <li>Cities</li>
+            <li>Help</li>
+            <li>Events</li>
+            <li>Fare Estimate</li>
+            <li>Airports</li>
+            <li>Promo Code</li>
+            <li>Gift Cards</li>
+            <li>All-Access Plan</li>
+            <li>Round Up & Donate</li>
+            <li>Blog</li>
+            </ul>
+        </aside>
+
+        <aside class="lyft">
+         <h4>LYFT</h4>
+            <ul>
+            <li>Careers</li>
+            <li>Business</li>
+            <li>Self-Driving</li>
+            <li>Developers</li>
+            <li>Safety</li>
+            <li>Scooters</li>
+            <li>Press</li>
+            </ul>
+        </aside>
+        
+        <section class="download">
+         <h4>DOWNLOAD</h4>
+            <div class="row4"><img src="img/appstore.png"><img src="img/googleplay.png"></div>
+            <div class="row5"><img src="img/microsoft.png"><img src="img/amazon.png"></div>
+        </section>
+ </footer>
 
 </body>
 </html>
