--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -41,8 +41,7 @@
 
  <footer>
         <aside class="driver">
-         <h4>DRIVER</h4>
-            <ul>
+            <ul style=list-style-type:none;><h4>DRIVER</h4>
             <li>Become a Driver</li>
             <li>Why Lyft</li>
             <li>Cities</li>
@@ -57,8 +56,7 @@
         </aside>
 
         <aside class="rider">
-         <h4>RIDER</h4>
-            <ul>
+            <ul style=list-style-type:none;><h4>RIDER</h4>
             <li>Sign up to Ride</li>
             <li>Business Profile</li>
             <li>Cities</li>
@@ -75,8 +73,7 @@
         </aside>
 
         <aside class="lyft">
-         <h4>LYFT</h4>
-            <ul>
+            <ul style=list-style-type:none;><h4>LYFT</h4>
             <li>Careers</li>
             <li>Business</li>
             <li>Self-Driving</li>
