--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
   <section class="week">
     <h2>Week 1</h2>
-    <a href="../01week/helloworld/index.html">Hello World</a>
+    <a href="./01week/helloworld/index.html">Hello World</a>
     <br />
-    <a href="../01week/resume/index.html">Resume</a>
+    <a href="./01week/resume/index.html">Resume</a>
   </section>
 
   <section class="week">
     <h2>Week 2</h2>
-    <a href="../02week/bio/index.html">Bio</a>
+    <a href="./02week/bio/index.html">Bio</a>
   </section>
   <section class="week">
     <h2>Week 3</h2>
