lazer sound working

--- a/checkpoint-3/index.html
+++ b/checkpoint-3/index.html
@@ -11,11 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     </head>    
-  <body>
-    <audio>
-      <source src="hit.wav" type="audio/mpeg">
-    </audio>        
-    <div id="screen">
+  <body>  
+    <div id="screen" class="playSound">
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
