html was giving lint error based on class value (added dash 1)

--- a/checkpoint-3/index.html
+++ b/checkpoint-3/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     </head>    
   <body>  
-    <div id="screen" class="playSound">
+    <div id="screen-1">
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
