put the button in the center of the page

--- a/checkpoint-3/index.html
+++ b/checkpoint-3/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css"/>
     <script src="main.js"></script>
+    <script src="http://code.jquery.com/jquery-3.2.1.js" ></script>
 </head>
 <body>
     <div>
     <div class="button-div">
-        <button  type="button" onClick="countClicks()">Click me</button>
-        <p>Clicks: <a id="clicks">0</a></p>
-        </div>
-        </div>
+            <button type="button" onClick="countClicks()">Click me</button>
+            <p>Clicks: <a id="clicks">0</a></p>      
+            </div>
+            </div>
 </body>
 </html>
