final design on header and nav. styling main content and footer layout.

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Lyft: A ride when you need one | Be a Lyft driver - Lyft</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
     <script src="main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
@@ -13,23 +14,22 @@
 
 <body>
 
- <header>
-    <img src="img/lyft-logo.png">
-    <div class="topnav">
-        <a href="index.html"><b>DRIVER</b></a>
-        <a href="index.html"><b>RIDER</b></a>
-        <a href="index.html"><b>LOGIN</b></a>
-    </div>
- </header>
- <hr>
- 
- <main>
+    <header class="header">
+        <img src="img/lyft-logo.png">
+        <div class="topnav">
+            <a href="index.html"><b>DRIVER</b></a>
+            <a href="index.html"><b>RIDER</b></a>
+            <a href="index.html"><b>LOGIN</b></a>
+        </div>
+    </header>
+    
+
+    <main>
         <section class="content">
-            <div class="grab">Grab the wheel<br>
-            and start earning.</div>
-            <div class="row3"><input type="tel" id="phone-number"
-            placeholder="Enter mobile phone number">
-            <input type="radio">I agree to Lyft's <u>Terms of Service</u></div><br>
+            <div class="grab"><b>Grab the wheel
+                <br>and start earning.</div>
+            <div class="row3"><input type="tel" id="phone-number" placeholder="Enter mobile phone number">
+                <input type="radio">I agree to Lyft's <u>Terms of Service</u></div><br>
             <button type="button">APPLY TO DRIVE</button><u>SIGN UP TO RIDE</u>
         </section>
 
@@ -37,59 +37,62 @@
             <img src="img/lyft-img.png">
         </aside>
 
- </main>
+    </main>
 
- <footer>
-        <aside class="driver">
-            <ul style=list-style-type:none;><h4>DRIVER</h4>
-            <li>Become a Driver</li>
-            <li>Why Lyft</li>
-            <li>Cities</li>
-            <li>Help</li>
-            <li>Express Drive</li>
-            <li>Application Requirements</li>
-            <li>Bonus</li>
-            <li>Earnings</li>
-            <li>Jobs</li>
-            <li>Hub</li>
+    <footer class="footer">
+        <div class="driver">
+            <ul style=list-style-type:none;>
+                <h4>DRIVER</h4>
+                <li>Become a Driver</li>
+                <li>Why Lyft</li>
+                <li>Cities</li>
+                <li>Help</li>
+                <li>Express Drive</li>
+                <li>Application Requirements</li>
+                <li>Bonus</li>
+                <li>Earnings</li>
+                <li>Jobs</li>
+                <li>Hub</li>
             </ul>
-        </aside>
+        </div>
 
-        <aside class="rider">
-            <ul style=list-style-type:none;><h4>RIDER</h4>
-            <li>Sign up to Ride</li>
-            <li>Business Profile</li>
-            <li>Cities</li>
-            <li>Help</li>
-            <li>Events</li>
-            <li>Fare Estimate</li>
-            <li>Airports</li>
-            <li>Promo Code</li>
-            <li>Gift Cards</li>
-            <li>All-Access Plan</li>
-            <li>Round Up & Donate</li>
-            <li>Blog</li>
+        <div class="rider">
+            <ul style=list-style-type:none;>
+                <h4>RIDER</h4>
+                <li>Sign up to Ride</li>
+                <li>Business Profile</li>
+                <li>Cities</li>
+                <li>Help</li>
+                <li>Events</li>
+                <li>Fare Estimate</li>
+                <li>Airports</li>
+                <li>Promo Code</li>
+                <li>Gift Cards</li>
+                <li>All-Access Plan</li>
+                <li>Round Up & Donate</li>
+                <li>Blog</li>
             </ul>
-        </aside>
+        </div>
 
-        <aside class="lyft">
-            <ul style=list-style-type:none;><h4>LYFT</h4>
-            <li>Careers</li>
-            <li>Business</li>
-            <li>Self-Driving</li>
-            <li>Developers</li>
-            <li>Safety</li>
-            <li>Scooters</li>
-            <li>Press</li>
+        <div class="lyft">
+            <ul style=list-style-type:none;>
+                <h4>LYFT</h4>
+                <li>Careers</li>
+                <li>Business</li>
+                <li>Self-Driving</li>
+                <li>Developers</li>
+                <li>Safety</li>
+                <li>Scooters</li>
+                <li>Press</li>
             </ul>
-        </aside>
-        
+        </div>
+
         <section class="download">
-         <h4>DOWNLOAD</h4>
+            <h4>DOWNLOAD</h4>
             <div class="row4"><img src="img/appstore.png"><img src="img/googleplay.png"></div>
             <div class="row5"><img src="img/microsoft.png"><img src="img/amazon.png"></div>
         </section>
- </footer>
+    </footer>
 
 </body>
 </html>
