added inventory section

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -71,6 +71,24 @@
     <div class="mainGameContainer">
 
     </div>
+    <div id="fullInventory">
+        <div class="fullInventoryItems">
+            <div class="fullInventoryTitle">
+                <div>ITEMS</div>
+            </div>
+            <div class="itemsGrid"></div>
+        </div>
+        <div class="fullInventorySpecial">
+            <div class="fullInventoryTitle">
+                <div>SPECIAL</div>
+            </div>
+        </div>
+        <div class="fullInventoryBoat">
+            <div class="fullInventoryTitle">
+                <div>BOAT</div>
+            </div>
+        </div>
+    </div>
 <script src="./javascript/main.js"></script>
 </body>
 </html>
