--- a/checkpoint-3/index.html
+++ b/checkpoint-3/index.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Clicker Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css"/>
     <script src="main.js"></script>
     <script src="http://code.jquery.com/jquery-3.2.1.js" ></script>
 </head>
 <body>
-    <div>
+    <div class=container>
     <div class="button-div">
             <button type="button" onClick="countClicks()">Click me</button>
-            <p>Clicks: <a id="clicks">0</a></p>      
+            <p>Clicks: <a id="clicks">0</a></p>
+            <span id="timer"></span>
             </div>
             </div>
+                  
 </body>
 </html>
