fixed the timer took out the text click me in the button

--- a/checkpoint-3/index.html
+++ b/checkpoint-3/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class=container>
     <div class="button-div">
-            <button type="button" onClick="countClicks()">Click me</button>
+            <button type="button" onClick="countClicks()"></button>
             <p>Clicks: <a id="clicks">0</a></p>
             <span id="timer"></span>
             </div>
