--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -29,8 +29,8 @@
             <div class="grab"><b>Grab the wheel
                 <br>and start earning.</div>
             <div class="row3"><input type="tel" id="phone-number" placeholder="Enter mobile phone number">
-                <input type="radio">I agree to Lyft's <u>Terms of Service</u></div><br>
-            <button type="button">APPLY TO DRIVE</button><u>SIGN UP TO RIDE</u>
+                <input type="radio">I agree to Lyft's <a href="index.html">Terms of Service</a></div><br>
+            <button type="button">APPLY TO DRIVE</button><a href="index.html">SIGN UP TO RIDE</a></u>
         </section>
 
         <aside class="main-image">
@@ -39,10 +39,10 @@
 
     </main>
 
-    <footer class="footer">
-        <div class="driver">
+    <section class="info">
+        <div class="list">
             <ul style=list-style-type:none;>
-                <h4>DRIVER</h4>
+                <h4>DRIVER</h4><br><br>
                 <li>Become a Driver</li>
                 <li>Why Lyft</li>
                 <li>Cities</li>
@@ -56,9 +56,9 @@
             </ul>
         </div>
 
-        <div class="rider">
+        <div class="list">
             <ul style=list-style-type:none;>
-                <h4>RIDER</h4>
+                <h4>RIDER</h4><br><br>
                 <li>Sign up to Ride</li>
                 <li>Business Profile</li>
                 <li>Cities</li>
@@ -74,9 +74,9 @@
             </ul>
         </div>
 
-        <div class="lyft">
+        <div class="list">
             <ul style=list-style-type:none;>
-                <h4>LYFT</h4>
+                <h4>LYFT</h4><br><br>
                 <li>Careers</li>
                 <li>Business</li>
                 <li>Self-Driving</li>
@@ -87,12 +87,22 @@
             </ul>
         </div>
 
-        <section class="download">
-            <h4>DOWNLOAD</h4>
-            <div class="row4"><img src="img/appstore.png"><img src="img/googleplay.png"></div>
-            <div class="row5"><img src="img/microsoft.png"><img src="img/amazon.png"></div>
-        </section>
-    </footer>
+        <div class="list">
+            <h4 id="h4">DOWNLOAD</h4><br><br>
+            <div><img id="apps" src="img/appstore.png"><img id="apps" src="img/googleplay.png"></div>
+            <br>
+            <div><img id="apps" src="img/microsoft.png"><img id="apps"src="img/amazon.png"></div>
+        </div>
+    </section>
 
+
+    <div class="foot">
+            <a href="index.html">Terms</a>
+            <a href="index.html">Privacy</a>
+            <a href="index.html">&copy 2018 Lyft, Inc.</a>
+            <a href="twitter.com"><img src="img/twitter-icon.png"></a>
+            <a href="facebook.com"><img src="img/facebook-icon.png"></a>
+            <a href="instagram.com"><img src="img/instagram-icon.png"></a>
+        </div>
 </body>
 </html>
